--- a/component-helpers/assemble/layouts/default_tpl.hbs
+++ b/component-helpers/assemble/layouts/default_tpl.hbs
@@ -4,10 +4,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>rb-item</title>
+
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE7" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
 		<link href="css/styles.css" rel="stylesheet" />
 		<script src="js/object-assign.js"></script>
 
 		<script src="https://boffinhouse.github.io/rawblock/sources/js/libs/rb-life.js"></script>
+		<script src="https://afarkas.github.io/lazysizes/lazysizes.js"></script>
 
 	</head>
 	<body>
