--- a/sources/assemble/partials/_blocks/rb_item.hbs
+++ b/sources/assemble/partials/_blocks/rb_item.hbs
@@ -6,21 +6,25 @@ component: rb_item
 	<div class="item-inner">
 		{{#if media}}
 			<div class="item-mediabox">
-				<div class="item-standard-mediabox-inner">
-					<img class="item-standard-media" src="{{ media.image.src }}" alt=""/>
-				</div>
+				<img class="item-media lazyload"
+				     data-srcset="{{join  media.image.srcs ", "}}"
+
+				     alt=""/>
 			</div>
 		{{/if}}
 		{{#or title hook }}
 			<div class="item-textbox">
-				{{#if title}}
-					<h2 class="item-title">{{ title }}</h2>
+				{{#if headline.title}}
+					<h2 class="item-title">{{ headline.title }}</h2>
 				{{/if}}
 				{{#if hook }}
 					<p class="item-text">{{ hook }}</p>
 				{{/if}}
 			</div>
 		{{/or}}
+
+		<span>More</span>
 	</div>
-	{{#if link}}<a class="item-standard-link" href="{{ link }}">{{ title }}<span>More</span></a>{{/if}}
+	{{#if link}}<a class="item-link" href="{{ link }}">{{ title }}</a>{{/if}}
+
 </article>
