--- a/sources/sass/_blocks/_rb_item.scss
+++ b/sources/sass/_blocks/_rb_item.scss
@@ -8,6 +8,12 @@ rb-item
 	position: relative;
 	width: 100%;
 
+	.item-inner {
+		pointer-events: none;
+		position: relative;
+		z-index: -1;
+	}
+
 	.item-title {
 
 	}
@@ -15,10 +21,33 @@ rb-item
 	.item-link {
 		@include rb-hide-text;
 		position: absolute;
+		display: block;
 		top: 0;
 		right: 0;
 		bottom: 0;
 		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 100;
+		background: rgba(#fff, 0);
+	}
+
+	.item-mediabox {
+		position: relative;
+		height: 0;
+		display: block;
+		width: 100%;
+		padding-bottom: calc(9/16 * 100%); //16:9 ratio
+		margin-bottom: 20px;
+	}
+
+	.item-media {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: block;
 	}
 }
 
