--- a/component-helpers/assemble/layouts/default_tpl.hbs
+++ b/component-helpers/assemble/layouts/default_tpl.hbs
@@ -19,6 +19,7 @@
 		</script>
 
 		<script src="https://boffinhouse.github.io/rawblock/sources/js/libs/rb-life.js"></script>
+		<script src="https://boffinhouse.github.io/rawblock/sources/js/modules/focus-within.js"></script>
 		<script src="https://afarkas.github.io/lazysizes/lazysizes.js"></script>
 
 	</head>
