--- a/component-helpers/assemble/layouts/default_tpl.hbs
+++ b/component-helpers/assemble/layouts/default_tpl.hbs
@@ -75,7 +75,7 @@
 				document.write('<script src="' + input.getAttribute('data-url') +'"><\/script>');
 			})();
 		</script>
-		<script src="https://boffinhouse.github.io/rawblock/sources/js/libs/rb-utils.js"></script
+		<script src="https://boffinhouse.github.io/rawblock/sources/js/libs/rb-utils.js"></script>
 		<script src="../sources/js/modules/rb_item.js"></script>
 	</body>
 </html>
