--- a/sources/assemble/pages/zdoc_rb_item.hbs
+++ b/sources/assemble/pages/zdoc_rb_item.hbs
@@ -3,7 +3,7 @@ title: rb_item
 layout: default_tpl.hbs
 ---
 
-<div class="is-column-group is-gutter">
+<div class="is-column-group is-gutters">
 	<div class="is-size-50">
 		{{#with rb_item}}
 			{{> rb_item}}
