--- a/component-helpers/assemble/pages/index.hbs
+++ b/component-helpers/assemble/pages/index.hbs
@@ -3,7 +3,7 @@ title: Index – Project-Overview
 layout: default_tpl.hbs
 ---
 
-<div class="is-column-group is-gutter">
+<div class="is-column-group is-gutters">
 	<div class="is-size-50 is-size-100-s">
 		{{#with rb_item}}
 			{{> rb_item}}
