updated project directories

--- a/component-helpers/assemble/layouts/default_tpl.hbs
+++ b/component-helpers/assemble/layouts/default_tpl.hbs
@@ -25,28 +25,30 @@
 		<header class="rb-page-header">
 
 
-			<div class="page-header-block is-column-group is-gutter">
-				<div class="is-size-auto is-offset-left">
-					<div class="rb-logo">
-						<h1 class="logo-title">rb_item</h1>
+			<div class="page-header-block">
+				<div class="is-column-group is-gutters-horizontal">
+					<div class="is-size-auto is-offset-left">
+						<div class="rb-logo">
+							<h1 class="logo-title">rb_item</h1>
+						</div>
 					</div>
-				</div>
-				<div class="is-size-auto is-offset-right">
-					<form class="rb-libchooser" id="libchooser">
-						<label>
-							<input type="radio" name="domlib"
-							       value="rbdom"
-							       data-url="https://boffinhouse.github.io/rawblock/sources/js/libs/dom.js"
-							       checked />
-							rbdom
-						</label>
-						<label>
-							<input type="radio" name="domlib"
-							       value="jquery"
-							       data-url="http://code.jquery.com/jquery-2.1.4.js" />
-							jquery
-						</label>
-					</form>
+					<div class="is-size-auto is-offset-right">
+						<form class="rb-libchooser" id="libchooser">
+							<label>
+								<input type="radio" name="domlib"
+								       value="rbdom"
+								       data-url="https://boffinhouse.github.io/rawblock/sources/js/libs/dom.js"
+								       checked />
+								rbdom
+							</label>
+							<label>
+								<input type="radio" name="domlib"
+								       value="jquery"
+								       data-url="http://code.jquery.com/jquery-2.1.4.js" />
+								jquery
+							</label>
+						</form>
+					</div>
 				</div>
 			</div>
 
